Fixed ETHREEOH-580 "Drop-down menu to find sites not selected by using "Tab" ("Shift+Tab") key"
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@17112 7033f55c-6c29-4ad8-afba-765cb616e738

Former-commit-id: 316604c3f354f6e9a554e3afa953a863b3a252c0

--- a/root/projects/slingshot/source/web/components/header/header.css
+++ b/root/projects/slingshot/source/web/components/header/header.css
@@ -167,6 +167,7 @@
    margin-top: 2px;
 }
 
+.header .yuimenu .bd div,
 .header .yuimenu .bd ul
 {
    padding:0;
@@ -187,7 +188,7 @@
 	padding: 4px 15px;
 }
 
-.header .yuimenu .bd ul li.header
+.header .yuimenu .bd div li
 {
    font-weight: bold;
    padding: 4px 15px;
